--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kioidun.github.io/tribunal-website",
+  "homepage": "https://https://github.com/kioidun/tribunal-website",
   "name": "websitetribunal",
   "version": "0.1.0",
   "private": true,
